[gd_scene load_steps=19 format=3 uid="uid://58hl61px281c"]

[ext_resource type="Script" path="res://objects/PROPS/package_box/package_box.gd" id="1_lly81"]
[ext_resource type="Texture2D" uid="uid://cuvt4anhakusy" path="res://assets/models/package_types/package_type_water_package_type_water.png" id="2_pwlvm"]
[ext_resource type="Texture2D" uid="uid://dbyhvno4irkhv" path="res://assets/models/package_types/package_type_glass_package_type_glass.png" id="2_t8ggx"]
[ext_resource type="Texture2D" uid="uid://b5p2oqgtwrakf" path="res://assets/models/package_types/package_type_eco_package_type_eco.png" id="3_pkjj0"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_fq8pu"]
resource_name = "box"
cull_mode = 2
albedo_color = Color(0.905882, 0.556863, 0.141176, 1)
roughness = 0.5

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_p4asg"]
resource_name = "stretch"
cull_mode = 2
albedo_color = Color(0.906332, 0.906332, 0.906332, 1)
roughness = 0.5

[sub_resource type="ArrayMesh" id="ArrayMesh_texmx"]
_surfaces = [{
"aabb": AABB(-0.25, -0.25, -0.375, 0.5, 0.5, 0.75001),
"format": 34896613377,
"index_count": 228,
"index_data": PackedByteArray(5, 0, 14, 0, 7, 0, 14, 0, 19, 0, 20, 0, 17, 0, 14, 0, 5, 0, 14, 0, 17, 0, 19, 0, 36, 0, 5, 0, 7, 0, 36, 0, 37, 0, 5, 0, 32, 0, 37, 0, 36, 0, 32, 0, 33, 0, 37, 0, 4, 0, 28, 0, 6, 0, 28, 0, 33, 0, 32, 0, 29, 0, 28, 0, 4, 0, 33, 0, 28, 0, 29, 0, 14, 0, 36, 0, 7, 0, 14, 0, 32, 0, 36, 0, 40, 0, 14, 0, 20, 0, 40, 0, 32, 0, 14, 0, 28, 0, 16, 0, 6, 0, 40, 0, 28, 0, 32, 0, 39, 0, 28, 0, 40, 0, 28, 0, 18, 0, 16, 0, 28, 0, 8, 0, 18, 0, 43, 0, 28, 0, 39, 0, 12, 0, 43, 0, 22, 0, 35, 0, 12, 0, 3, 0, 31, 0, 12, 0, 35, 0, 43, 0, 8, 0, 28, 0, 31, 0, 43, 0, 12, 0, 10, 0, 27, 0, 2, 0, 27, 0, 43, 0, 31, 0, 43, 0, 24, 0, 8, 0, 24, 0, 27, 0, 10, 0, 24, 0, 43, 0, 27, 0, 12, 0, 1, 0, 3, 0, 11, 0, 22, 0, 25, 0, 12, 0, 11, 0, 1, 0, 12, 0, 22, 0, 11, 0, 11, 0, 34, 0, 1, 0, 11, 0, 30, 0, 34, 0, 42, 0, 11, 0, 25, 0, 42, 0, 30, 0, 11, 0, 26, 0, 13, 0, 0, 0, 42, 0, 26, 0, 30, 0, 38, 0, 26, 0, 42, 0, 26, 0, 23, 0, 13, 0, 26, 0, 9, 0, 23, 0, 41, 0, 26, 0, 38, 0, 17, 0, 41, 0, 19, 0, 37, 0, 17, 0, 5, 0, 33, 0, 17, 0, 37, 0, 41, 0, 9, 0, 26, 0, 33, 0, 41, 0, 17, 0, 15, 0, 29, 0, 4, 0, 29, 0, 41, 0, 33, 0, 41, 0, 21, 0, 9, 0, 21, 0, 29, 0, 15, 0, 21, 0, 41, 0, 29, 0, 34, 0, 3, 0, 1, 0, 34, 0, 35, 0, 3, 0, 30, 0, 35, 0, 34, 0, 30, 0, 31, 0, 35, 0, 2, 0, 26, 0, 0, 0, 26, 0, 31, 0, 30, 0, 27, 0, 26, 0, 2, 0, 31, 0, 26, 0, 27, 0, 16, 0, 4, 0, 6, 0, 16, 0, 15, 0, 4, 0, 18, 0, 15, 0, 16, 0, 18, 0, 21, 0, 15, 0, 8, 0, 21, 0, 18, 0, 8, 0, 9, 0, 21, 0, 24, 0, 9, 0, 8, 0, 24, 0, 23, 0, 9, 0, 0, 0, 10, 0, 2, 0, 10, 0, 23, 0, 24, 0, 13, 0, 10, 0, 0, 0, 23, 0, 10, 0, 13, 0),
"lods": [0.000176245, PackedByteArray(5, 0, 14, 0, 7, 0, 17, 0, 14, 0, 5, 0, 14, 0, 17, 0, 19, 0, 14, 0, 19, 0, 20, 0, 28, 0, 5, 0, 7, 0, 28, 0, 37, 0, 5, 0, 37, 0, 28, 0, 4, 0, 4, 0, 28, 0, 6, 0, 14, 0, 28, 0, 7, 0, 40, 0, 14, 0, 20, 0, 40, 0, 28, 0, 14, 0, 39, 0, 28, 0, 40, 0, 43, 0, 28, 0, 39, 0, 43, 0, 24, 0, 28, 0, 28, 0, 24, 0, 6, 0, 24, 0, 43, 0, 35, 0, 24, 0, 35, 0, 2, 0, 35, 0, 43, 0, 12, 0, 12, 0, 43, 0, 22, 0, 35, 0, 12, 0, 3, 0, 12, 0, 1, 0, 3, 0, 12, 0, 11, 0, 1, 0, 12, 0, 22, 0, 11, 0, 11, 0, 22, 0, 25, 0, 11, 0, 26, 0, 1, 0, 42, 0, 11, 0, 25, 0, 42, 0, 26, 0, 11, 0, 38, 0, 26, 0, 42, 0, 41, 0, 26, 0, 38, 0, 41, 0, 21, 0, 26, 0, 26, 0, 21, 0, 0, 0, 21, 0, 41, 0, 37, 0, 21, 0, 37, 0, 4, 0, 37, 0, 41, 0, 17, 0, 17, 0, 41, 0, 19, 0, 37, 0, 17, 0, 5, 0, 26, 0, 3, 0, 1, 0, 26, 0, 35, 0, 3, 0, 35, 0, 26, 0, 2, 0, 2, 0, 26, 0, 0, 0, 24, 0, 4, 0, 6, 0, 24, 0, 21, 0, 4, 0, 21, 0, 24, 0, 0, 0, 0, 0, 24, 0, 2, 0)],
"name": "box",
"primitive": 3,
"uv_scale": Vector4(0, 0, 0, 0),
"vertex_count": 44,
"vertex_data": PackedByteArray(0, 0, 0, 0, 254, 255, 0, 0, 0, 0, 255, 255, 254, 255, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 255, 255, 0, 0, 0, 0, 255, 255, 0, 0, 254, 255, 0, 0, 255, 255, 255, 255, 254, 255, 0, 0, 255, 255, 0, 0, 0, 0, 0, 0, 255, 255, 255, 255, 0, 0, 0, 0, 255, 127, 0, 0, 0, 0, 0, 0, 255, 127, 0, 0, 254, 255, 0, 0, 192, 64, 0, 0, 0, 0, 0, 0, 192, 64, 255, 255, 254, 255, 0, 0, 192, 64, 255, 255, 0, 0, 0, 0, 192, 64, 0, 0, 254, 255, 0, 0, 255, 191, 255, 255, 0, 0, 0, 0, 255, 191, 0, 0, 254, 255, 0, 0, 255, 191, 0, 0, 0, 0, 0, 0, 255, 191, 255, 255, 254, 255, 0, 0, 255, 159, 0, 0, 0, 0, 0, 0, 255, 159, 255, 255, 254, 255, 0, 0, 255, 159, 255, 255, 0, 0, 0, 0, 255, 159, 0, 0, 254, 255, 0, 0, 95, 96, 255, 255, 0, 0, 0, 0, 95, 96, 0, 0, 254, 255, 0, 0, 95, 96, 0, 0, 0, 0, 0, 0, 95, 96, 255, 255, 254, 255, 0, 0, 0, 0, 14, 128, 254, 255, 0, 0, 0, 0, 14, 128, 0, 0, 0, 0, 255, 255, 14, 128, 0, 0, 0, 0, 255, 255, 14, 128, 254, 255, 0, 0, 0, 0, 6, 192, 254, 255, 0, 0, 0, 0, 6, 192, 0, 0, 0, 0, 255, 255, 6, 192, 0, 0, 0, 0, 255, 255, 6, 192, 254, 255, 0, 0, 0, 0, 2, 224, 254, 255, 0, 0, 0, 0, 2, 224, 0, 0, 0, 0, 255, 255, 2, 224, 0, 0, 0, 0, 255, 255, 2, 224, 254, 255, 0, 0, 255, 127, 2, 224, 254, 255, 0, 0, 255, 127, 2, 224, 0, 0, 0, 0, 255, 159, 2, 224, 0, 0, 0, 0, 255, 159, 2, 224, 254, 255, 0, 0, 95, 96, 2, 224, 254, 255, 0, 0, 95, 96, 2, 224, 0, 0, 0, 0)
}, {
"aabb": AABB(-0.0617648, 0.187529, -0.375, 0.124265, 0.0624813, 0.75),
"format": 34896613377,
"index_count": 36,
"index_data": PackedByteArray(2, 0, 0, 0, 3, 0, 0, 0, 5, 0, 4, 0, 1, 0, 0, 0, 2, 0, 0, 0, 1, 0, 5, 0, 7, 0, 4, 0, 11, 0, 0, 0, 8, 0, 3, 0, 7, 0, 0, 0, 4, 0, 0, 0, 7, 0, 8, 0, 6, 0, 2, 0, 9, 0, 1, 0, 10, 0, 5, 0, 6, 0, 1, 0, 2, 0, 1, 0, 6, 0, 10, 0),
"name": "stretch",
"primitive": 3,
"uv_scale": Vector4(0, 0, 0, 0),
"vertex_count": 12,
"vertex_data": PackedByteArray(61, 127, 244, 255, 0, 0, 0, 0, 61, 127, 244, 255, 255, 255, 0, 0, 255, 255, 244, 255, 255, 255, 0, 0, 255, 255, 244, 255, 0, 0, 0, 0, 0, 0, 244, 255, 0, 0, 0, 0, 0, 0, 244, 255, 255, 255, 0, 0, 61, 127, 0, 0, 255, 255, 0, 0, 61, 127, 0, 0, 0, 0, 0, 0, 255, 255, 0, 0, 0, 0, 0, 0, 255, 255, 0, 0, 255, 255, 0, 0, 0, 0, 0, 0, 255, 255, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0)
}]
blend_shape_mode = 0

[sub_resource type="ArrayMesh" id="ArrayMesh_70i2a"]
resource_name = "package_box_Cube_001"
_surfaces = [{
"aabb": AABB(-0.25, -0.25, -0.375, 0.5, 0.5, 0.75001),
"attribute_data": PackedByteArray(255, 95, 255, 255, 255, 31, 255, 63, 255, 95, 0, 0, 255, 159, 255, 255, 255, 159, 0, 0, 255, 223, 255, 63, 255, 95, 255, 191, 255, 31, 255, 127, 255, 95, 255, 191, 255, 159, 255, 191, 255, 159, 255, 191, 255, 223, 255, 127, 255, 95, 255, 63, 255, 95, 255, 63, 255, 95, 255, 63, 255, 159, 255, 63, 255, 159, 255, 63, 255, 159, 255, 63, 255, 95, 255, 127, 255, 95, 255, 127, 255, 95, 255, 127, 255, 159, 255, 127, 255, 159, 255, 127, 255, 159, 255, 127, 255, 63, 255, 127, 255, 95, 255, 159, 255, 63, 255, 63, 255, 95, 255, 31, 47, 48, 255, 127, 255, 95, 207, 175, 255, 159, 48, 16, 207, 207, 255, 63, 255, 159, 207, 175, 207, 207, 255, 127, 47, 48, 255, 63, 255, 95, 48, 16, 255, 159, 255, 143, 255, 175, 255, 127, 255, 79, 255, 63, 255, 95, 255, 47, 255, 79, 255, 127, 255, 95, 255, 143, 255, 159, 255, 47, 255, 175, 255, 63, 255, 71, 255, 127, 255, 95, 255, 151, 255, 159, 255, 39, 255, 183, 255, 63, 255, 159, 255, 151, 255, 183, 255, 127, 255, 71, 255, 63, 255, 95, 255, 39, 255, 159, 231, 167, 231, 199, 255, 127, 23, 56, 255, 63, 255, 95, 23, 24, 23, 56, 255, 127, 255, 95, 231, 167, 255, 159, 23, 24, 231, 199, 255, 63, 3, 128, 255, 255, 3, 128, 0, 0, 3, 128, 255, 191, 3, 128, 255, 191, 3, 128, 255, 127, 3, 128, 255, 127, 3, 128, 255, 63, 3, 128, 255, 63, 1, 144, 255, 255, 1, 144, 0, 0, 1, 144, 255, 191, 1, 144, 255, 191, 1, 144, 255, 127, 1, 144, 255, 127, 1, 144, 255, 63, 1, 144, 255, 63, 0, 152, 255, 255, 0, 152, 0, 0, 0, 152, 255, 191, 0, 152, 255, 191, 0, 152, 255, 127, 0, 152, 255, 127, 0, 152, 255, 63, 0, 152, 255, 63, 0, 152, 255, 31, 0, 152, 255, 159, 0, 152, 255, 151, 0, 152, 255, 39, 0, 152, 23, 24, 0, 152, 231, 167),
"format": 34896613399,
"index_count": 228,
"index_data": PackedByteArray(16, 0, 37, 0, 22, 0, 37, 0, 47, 0, 49, 0, 43, 0, 37, 0, 16, 0, 37, 0, 43, 0, 47, 0, 81, 0, 17, 0, 23, 0, 81, 0, 83, 0, 17, 0, 73, 0, 83, 0, 81, 0, 73, 0, 75, 0, 83, 0, 14, 0, 65, 0, 20, 0, 65, 0, 75, 0, 73, 0, 67, 0, 65, 0, 14, 0, 75, 0, 65, 0, 67, 0, 36, 0, 80, 0, 21, 0, 36, 0, 72, 0, 80, 0, 86, 0, 36, 0, 48, 0, 86, 0, 72, 0, 36, 0, 64, 0, 41, 0, 19, 0, 86, 0, 64, 0, 72, 0, 85, 0, 64, 0, 86, 0, 64, 0, 45, 0, 41, 0, 64, 0, 25, 0, 45, 0, 89, 0, 64, 0, 85, 0, 32, 0, 89, 0, 52, 0, 79, 0, 32, 0, 10, 0, 71, 0, 32, 0, 79, 0, 89, 0, 25, 0, 64, 0, 71, 0, 89, 0, 32, 0, 29, 0, 63, 0, 8, 0, 63, 0, 89, 0, 71, 0, 89, 0, 57, 0, 25, 0, 57, 0, 63, 0, 29, 0, 57, 0, 89, 0, 63, 0, 33, 0, 5, 0, 11, 0, 31, 0, 53, 0, 59, 0, 33, 0, 31, 0, 5, 0, 33, 0, 53, 0, 31, 0, 30, 0, 77, 0, 4, 0, 30, 0, 69, 0, 77, 0, 88, 0, 30, 0, 58, 0, 88, 0, 69, 0, 30, 0, 61, 0, 35, 0, 2, 0, 88, 0, 61, 0, 69, 0, 84, 0, 61, 0, 88, 0, 61, 0, 55, 0, 35, 0, 61, 0, 27, 0, 55, 0, 87, 0, 61, 0, 84, 0, 42, 0, 87, 0, 46, 0, 82, 0, 42, 0, 15, 0, 74, 0, 42, 0, 82, 0, 87, 0, 27, 0, 61, 0, 74, 0, 87, 0, 42, 0, 39, 0, 66, 0, 13, 0, 66, 0, 87, 0, 74, 0, 87, 0, 51, 0, 27, 0, 51, 0, 66, 0, 39, 0, 51, 0, 87, 0, 66, 0, 76, 0, 9, 0, 3, 0, 76, 0, 78, 0, 9, 0, 68, 0, 78, 0, 76, 0, 68, 0, 70, 0, 78, 0, 6, 0, 60, 0, 0, 0, 60, 0, 70, 0, 68, 0, 62, 0, 60, 0, 6, 0, 70, 0, 60, 0, 62, 0, 40, 0, 12, 0, 18, 0, 40, 0, 38, 0, 12, 0, 44, 0, 38, 0, 40, 0, 44, 0, 50, 0, 38, 0, 24, 0, 50, 0, 44, 0, 24, 0, 26, 0, 50, 0, 56, 0, 26, 0, 24, 0, 56, 0, 54, 0, 26, 0, 1, 0, 28, 0, 7, 0, 28, 0, 54, 0, 56, 0, 34, 0, 28, 0, 1, 0, 54, 0, 28, 0, 34, 0),
"lods": [0.000176245, PackedByteArray(16, 0, 37, 0, 22, 0, 43, 0, 37, 0, 16, 0, 37, 0, 43, 0, 47, 0, 37, 0, 47, 0, 49, 0, 65, 0, 17, 0, 23, 0, 65, 0, 83, 0, 17, 0, 83, 0, 65, 0, 14, 0, 14, 0, 65, 0, 20, 0, 36, 0, 64, 0, 21, 0, 86, 0, 36, 0, 48, 0, 86, 0, 64, 0, 36, 0, 85, 0, 64, 0, 86, 0, 89, 0, 64, 0, 85, 0, 89, 0, 57, 0, 64, 0, 64, 0, 57, 0, 19, 0, 57, 0, 89, 0, 79, 0, 57, 0, 79, 0, 8, 0, 79, 0, 89, 0, 32, 0, 32, 0, 89, 0, 52, 0, 79, 0, 32, 0, 10, 0, 33, 0, 5, 0, 11, 0, 33, 0, 31, 0, 5, 0, 33, 0, 53, 0, 31, 0, 31, 0, 53, 0, 59, 0, 30, 0, 61, 0, 4, 0, 88, 0, 30, 0, 58, 0, 88, 0, 61, 0, 30, 0, 84, 0, 61, 0, 88, 0, 87, 0, 61, 0, 84, 0, 87, 0, 51, 0, 61, 0, 61, 0, 51, 0, 2, 0, 51, 0, 87, 0, 82, 0, 51, 0, 82, 0, 13, 0, 82, 0, 87, 0, 42, 0, 42, 0, 87, 0, 46, 0, 82, 0, 42, 0, 15, 0, 60, 0, 9, 0, 3, 0, 60, 0, 78, 0, 9, 0, 78, 0, 60, 0, 6, 0, 6, 0, 60, 0, 0, 0, 56, 0, 12, 0, 18, 0, 56, 0, 50, 0, 12, 0, 50, 0, 56, 0, 1, 0, 1, 0, 56, 0, 7, 0)],
"material": SubResource("StandardMaterial3D_fq8pu"),
"name": "box",
"primitive": 3,
"uv_scale": Vector4(0, 0, 0, 0),
"vertex_count": 90,
"vertex_data": PackedByteArray(0, 0, 0, 0, 254, 255, 84, 213, 0, 0, 0, 0, 254, 255, 255, 191, 0, 0, 0, 0, 254, 255, 255, 191, 0, 0, 255, 255, 254, 255, 84, 213, 0, 0, 255, 255, 254, 255, 255, 191, 0, 0, 255, 255, 254, 255, 255, 255, 0, 0, 0, 0, 0, 0, 84, 213, 0, 0, 0, 0, 0, 0, 255, 191, 0, 0, 0, 0, 0, 0, 255, 255, 0, 0, 255, 255, 0, 0, 84, 213, 0, 0, 255, 255, 0, 0, 255, 255, 0, 0, 255, 255, 0, 0, 255, 255, 255, 255, 0, 0, 254, 255, 255, 191, 255, 255, 0, 0, 254, 255, 255, 191, 255, 255, 0, 0, 254, 255, 84, 213, 255, 255, 255, 255, 254, 255, 255, 191, 255, 255, 255, 255, 254, 255, 255, 255, 255, 255, 255, 255, 254, 255, 84, 213, 255, 255, 0, 0, 0, 0, 255, 191, 255, 255, 0, 0, 0, 0, 255, 255, 255, 255, 0, 0, 0, 0, 84, 213, 255, 255, 255, 255, 0, 0, 255, 255, 255, 255, 255, 255, 0, 0, 255, 255, 255, 255, 255, 255, 0, 0, 84, 213, 255, 127, 0, 0, 0, 0, 255, 191, 255, 127, 0, 0, 0, 0, 255, 255, 255, 127, 0, 0, 254, 255, 255, 191, 255, 127, 0, 0, 254, 255, 255, 191, 192, 64, 0, 0, 0, 0, 255, 191, 192, 64, 0, 0, 0, 0, 255, 255, 192, 64, 255, 255, 254, 255, 255, 191, 192, 64, 255, 255, 254, 255, 255, 255, 192, 64, 255, 255, 0, 0, 255, 255, 192, 64, 255, 255, 0, 0, 255, 255, 192, 64, 0, 0, 254, 255, 255, 191, 192, 64, 0, 0, 254, 255, 255, 191, 255, 191, 255, 255, 0, 0, 255, 255, 255, 191, 255, 255, 0, 0, 255, 255, 255, 191, 0, 0, 254, 255, 255, 191, 255, 191, 0, 0, 254, 255, 255, 191, 255, 191, 0, 0, 0, 0, 255, 191, 255, 191, 0, 0, 0, 0, 255, 255, 255, 191, 255, 255, 254, 255, 255, 191, 255, 191, 255, 255, 254, 255, 255, 255, 255, 159, 0, 0, 0, 0, 255, 191, 255, 159, 0, 0, 0, 0, 255, 255, 255, 159, 255, 255, 254, 255, 255, 191, 255, 159, 255, 255, 254, 255, 255, 255, 255, 159, 255, 255, 0, 0, 255, 255, 255, 159, 255, 255, 0, 0, 255, 255, 255, 159, 0, 0, 254, 255, 255, 191, 255, 159, 0, 0, 254, 255, 255, 191, 95, 96, 255, 255, 0, 0, 255, 255, 95, 96, 255, 255, 0, 0, 255, 255, 95, 96, 0, 0, 254, 255, 255, 191, 95, 96, 0, 0, 254, 255, 255, 191, 95, 96, 0, 0, 0, 0, 255, 191, 95, 96, 0, 0, 0, 0, 255, 255, 95, 96, 255, 255, 254, 255, 255, 191, 95, 96, 255, 255, 254, 255, 255, 255, 0, 0, 14, 128, 254, 255, 84, 213, 0, 0, 14, 128, 254, 255, 255, 191, 0, 0, 14, 128, 0, 0, 84, 213, 0, 0, 14, 128, 0, 0, 255, 255, 255, 255, 14, 128, 0, 0, 255, 255, 255, 255, 14, 128, 0, 0, 84, 213, 255, 255, 14, 128, 254, 255, 255, 191, 255, 255, 14, 128, 254, 255, 84, 213, 0, 0, 6, 192, 254, 255, 84, 213, 0, 0, 6, 192, 254, 255, 255, 191, 0, 0, 6, 192, 0, 0, 84, 213, 0, 0, 6, 192, 0, 0, 255, 255, 255, 255, 6, 192, 0, 0, 255, 255, 255, 255, 6, 192, 0, 0, 84, 213, 255, 255, 6, 192, 254, 255, 255, 191, 255, 255, 6, 192, 254, 255, 84, 213, 0, 0, 2, 224, 254, 255, 84, 213, 0, 0, 2, 224, 254, 255, 255, 191, 0, 0, 2, 224, 0, 0, 84, 213, 0, 0, 2, 224, 0, 0, 255, 255, 255, 255, 2, 224, 0, 0, 255, 255, 255, 255, 2, 224, 0, 0, 84, 213, 255, 255, 2, 224, 254, 255, 255, 191, 255, 255, 2, 224, 254, 255, 84, 213, 255, 127, 2, 224, 254, 255, 255, 191, 255, 127, 2, 224, 0, 0, 255, 255, 255, 159, 2, 224, 0, 0, 255, 255, 255, 159, 2, 224, 254, 255, 255, 191, 95, 96, 2, 224, 254, 255, 255, 191, 95, 96, 2, 224, 0, 0, 255, 255, 84, 213, 84, 213, 0, 0, 255, 127, 255, 255, 255, 255, 84, 213, 84, 213, 255, 255, 255, 255, 255, 127, 255, 191, 84, 213, 84, 213, 0, 0, 255, 127, 255, 191, 255, 191, 84, 213, 84, 213, 255, 191, 255, 191, 255, 127, 255, 191, 0, 0, 255, 127, 255, 255, 255, 255, 170, 42, 170, 42, 255, 255, 255, 255, 255, 127, 255, 191, 170, 42, 170, 42, 0, 0, 255, 127, 255, 191, 255, 191, 170, 42, 170, 42, 255, 191, 255, 191, 255, 127, 255, 191, 170, 42, 170, 42, 0, 0, 255, 127, 255, 191, 255, 191, 0, 0, 255, 127, 255, 255, 255, 255, 0, 0, 255, 127, 255, 191, 255, 191, 255, 255, 255, 255, 255, 127, 255, 191, 255, 191, 255, 191, 255, 127, 255, 191, 0, 0, 255, 127, 255, 255, 255, 255, 255, 191, 255, 191, 255, 127, 255, 191, 0, 0, 255, 127, 255, 255, 255, 255, 0, 0, 255, 127, 255, 191, 255, 191, 255, 255, 255, 255, 255, 127, 255, 191, 0, 0, 255, 127, 255, 191, 255, 191, 255, 255, 255, 255, 255, 127, 255, 191, 255, 191, 255, 191, 255, 127, 255, 191, 0, 0, 255, 127, 255, 255, 255, 255, 255, 191, 255, 191, 255, 127, 255, 191, 0, 0, 255, 127, 255, 255, 255, 255, 0, 0, 255, 127, 255, 191, 255, 191, 255, 255, 255, 255, 255, 127, 255, 191, 84, 213, 84, 213, 255, 255, 255, 255, 84, 213, 84, 213, 255, 191, 255, 191, 255, 191, 255, 191, 170, 42, 170, 42, 255, 255, 255, 255, 170, 42, 170, 42, 84, 213, 84, 213, 255, 255, 255, 255, 84, 213, 84, 213, 255, 191, 255, 191, 255, 191, 255, 191, 170, 42, 170, 42, 255, 255, 255, 255, 170, 42, 170, 42, 84, 213, 84, 213, 255, 255, 255, 255, 84, 213, 84, 213, 255, 191, 255, 191, 255, 191, 255, 191, 170, 42, 170, 42, 255, 255, 255, 255, 170, 42, 170, 42, 255, 255, 255, 255, 255, 191, 255, 191, 255, 191, 255, 191, 255, 255, 255, 255, 255, 255, 255, 255, 255, 191, 255, 191)
}, {
"aabb": AABB(-0.0617648, 0.187529, -0.375, 0.124265, 0.0624813, 0.75),
"attribute_data": PackedByteArray(255, 159, 255, 159, 255, 191, 255, 127, 255, 159, 255, 31, 255, 191, 255, 63, 255, 159, 255, 39, 255, 183, 255, 63, 255, 159, 255, 151, 255, 183, 255, 127, 255, 159, 231, 167, 231, 199, 255, 127, 255, 159, 23, 24, 231, 199, 255, 63, 0, 152, 255, 31, 0, 152, 255, 159, 0, 152, 255, 151, 0, 152, 255, 39, 0, 152, 23, 24, 0, 152, 231, 167),
"format": 34896613399,
"index_count": 36,
"index_data": PackedByteArray(5, 0, 1, 0, 7, 0, 1, 0, 11, 0, 9, 0, 3, 0, 1, 0, 5, 0, 1, 0, 3, 0, 11, 0, 13, 0, 8, 0, 17, 0, 0, 0, 14, 0, 6, 0, 13, 0, 0, 0, 8, 0, 0, 0, 13, 0, 14, 0, 12, 0, 4, 0, 15, 0, 2, 0, 16, 0, 10, 0, 12, 0, 2, 0, 4, 0, 2, 0, 12, 0, 16, 0),
"material": SubResource("StandardMaterial3D_p4asg"),
"name": "stretch",
"primitive": 3,
"uv_scale": Vector4(0, 0, 0, 0),
"vertex_count": 18,
"vertex_data": PackedByteArray(61, 127, 244, 255, 0, 0, 255, 255, 61, 127, 244, 255, 0, 0, 255, 255, 61, 127, 244, 255, 255, 255, 255, 191, 61, 127, 244, 255, 255, 255, 255, 255, 255, 255, 244, 255, 255, 255, 255, 191, 255, 255, 244, 255, 255, 255, 255, 255, 255, 255, 244, 255, 0, 0, 255, 255, 255, 255, 244, 255, 0, 0, 255, 255, 0, 0, 244, 255, 0, 0, 255, 255, 0, 0, 244, 255, 0, 0, 255, 255, 0, 0, 244, 255, 255, 255, 255, 191, 0, 0, 244, 255, 255, 255, 255, 255, 61, 127, 0, 0, 255, 255, 255, 191, 61, 127, 0, 0, 0, 0, 255, 255, 255, 255, 0, 0, 0, 0, 255, 255, 255, 255, 0, 0, 255, 255, 255, 191, 0, 0, 0, 0, 255, 255, 255, 191, 0, 0, 0, 0, 0, 0, 255, 255, 255, 191, 255, 191, 255, 127, 255, 191, 255, 255, 255, 255, 255, 127, 255, 191, 255, 255, 255, 255, 255, 127, 255, 191, 255, 191, 255, 191, 255, 127, 255, 191, 255, 191, 255, 191, 255, 127, 255, 191, 255, 255, 255, 255, 255, 127, 255, 191, 255, 255, 255, 255, 255, 191, 255, 191, 255, 191, 255, 191, 255, 255, 255, 255, 255, 255, 255, 255, 255, 191, 255, 191)
}]
blend_shape_mode = 0
shadow_mesh = SubResource("ArrayMesh_texmx")

[sub_resource type="BoxShape3D" id="BoxShape3D_kwxbf"]
size = Vector3(0.501953, 0.382813, 0.753967)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_3bnys"]
resource_name = "package_type_glass"
transparency = 4
cull_mode = 2
albedo_texture = ExtResource("2_t8ggx")
roughness = 0.5
texture_repeat = false

[sub_resource type="ArrayMesh" id="ArrayMesh_824ft"]
_surfaces = [{
"aabb": AABB(-0.5, 0, -0.5, 1, 1e-05, 1.00001),
"format": 34896613377,
"index_count": 6,
"index_data": PackedByteArray(0, 0, 3, 0, 1, 0, 0, 0, 2, 0, 3, 0),
"name": "package_type_glass",
"primitive": 3,
"uv_scale": Vector4(0, 0, 0, 0),
"vertex_count": 4,
"vertex_data": PackedByteArray(0, 0, 0, 0, 254, 255, 0, 0, 255, 255, 0, 0, 254, 255, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 255, 255, 0, 0, 0, 0, 0, 0)
}]
blend_shape_mode = 0

[sub_resource type="ArrayMesh" id="ArrayMesh_ycaqo"]
resource_name = "package_type_glass_package_type_glass"
_surfaces = [{
"aabb": AABB(-0.5, 0, -0.5, 1, 1e-05, 1.00001),
"attribute_data": PackedByteArray(0, 0, 255, 255, 255, 255, 255, 255, 0, 0, 0, 0, 255, 255, 0, 0),
"format": 34896613399,
"index_count": 6,
"index_data": PackedByteArray(0, 0, 3, 0, 1, 0, 0, 0, 2, 0, 3, 0),
"material": SubResource("StandardMaterial3D_3bnys"),
"name": "package_type_glass",
"primitive": 3,
"uv_scale": Vector4(0, 0, 0, 0),
"vertex_count": 4,
"vertex_data": PackedByteArray(0, 0, 0, 0, 254, 255, 255, 191, 255, 255, 0, 0, 254, 255, 255, 191, 0, 0, 0, 0, 0, 0, 255, 191, 255, 255, 0, 0, 0, 0, 255, 191, 255, 255, 255, 127, 255, 255, 255, 127, 255, 255, 255, 127, 255, 255, 255, 127)
}]
blend_shape_mode = 0
shadow_mesh = SubResource("ArrayMesh_824ft")

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_cqro0"]
resource_name = "package_type_eco"
transparency = 4
cull_mode = 2
albedo_texture = ExtResource("3_pkjj0")
roughness = 0.5
texture_repeat = false

[sub_resource type="ArrayMesh" id="ArrayMesh_a2gam"]
_surfaces = [{
"aabb": AABB(-0.5, 0, -0.5, 1, 1e-05, 1.00001),
"format": 34896613377,
"index_count": 6,
"index_data": PackedByteArray(0, 0, 3, 0, 1, 0, 0, 0, 2, 0, 3, 0),
"name": "package_type_eco",
"primitive": 3,
"uv_scale": Vector4(0, 0, 0, 0),
"vertex_count": 4,
"vertex_data": PackedByteArray(0, 0, 0, 0, 254, 255, 0, 0, 255, 255, 0, 0, 254, 255, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 255, 255, 0, 0, 0, 0, 0, 0)
}]
blend_shape_mode = 0

[sub_resource type="ArrayMesh" id="ArrayMesh_wlgpv"]
resource_name = "package_type_eco_package_type_eco"
_surfaces = [{
"aabb": AABB(-0.5, 0, -0.5, 1, 1e-05, 1.00001),
"attribute_data": PackedByteArray(0, 0, 255, 255, 255, 255, 255, 255, 0, 0, 0, 0, 255, 255, 0, 0),
"format": 34896613399,
"index_count": 6,
"index_data": PackedByteArray(0, 0, 3, 0, 1, 0, 0, 0, 2, 0, 3, 0),
"material": SubResource("StandardMaterial3D_cqro0"),
"name": "package_type_eco",
"primitive": 3,
"uv_scale": Vector4(0, 0, 0, 0),
"vertex_count": 4,
"vertex_data": PackedByteArray(0, 0, 0, 0, 254, 255, 255, 191, 255, 255, 0, 0, 254, 255, 255, 191, 0, 0, 0, 0, 0, 0, 255, 191, 255, 255, 0, 0, 0, 0, 255, 191, 255, 255, 255, 127, 255, 255, 255, 127, 255, 255, 255, 127, 255, 255, 255, 127)
}]
blend_shape_mode = 0
shadow_mesh = SubResource("ArrayMesh_a2gam")

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_k6dkw"]
resource_name = "package_type_water"
transparency = 4
cull_mode = 2
albedo_texture = ExtResource("2_pwlvm")
roughness = 0.5
texture_repeat = false

[sub_resource type="ArrayMesh" id="ArrayMesh_57aln"]
_surfaces = [{
"aabb": AABB(-0.5, 0, -0.5, 1, 1e-05, 1.00001),
"format": 34896613377,
"index_count": 6,
"index_data": PackedByteArray(0, 0, 3, 0, 1, 0, 0, 0, 2, 0, 3, 0),
"name": "package_type_water",
"primitive": 3,
"uv_scale": Vector4(0, 0, 0, 0),
"vertex_count": 4,
"vertex_data": PackedByteArray(0, 0, 0, 0, 254, 255, 0, 0, 255, 255, 0, 0, 254, 255, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 255, 255, 0, 0, 0, 0, 0, 0)
}]
blend_shape_mode = 0

[sub_resource type="ArrayMesh" id="ArrayMesh_xjoje"]
resource_name = "package_type_water_package_type_water"
_surfaces = [{
"aabb": AABB(-0.5, 0, -0.5, 1, 1e-05, 1.00001),
"attribute_data": PackedByteArray(0, 0, 255, 255, 255, 255, 255, 255, 0, 0, 0, 0, 255, 255, 0, 0),
"format": 34896613399,
"index_count": 6,
"index_data": PackedByteArray(0, 0, 3, 0, 1, 0, 0, 0, 2, 0, 3, 0),
"material": SubResource("StandardMaterial3D_k6dkw"),
"name": "package_type_water",
"primitive": 3,
"uv_scale": Vector4(0, 0, 0, 0),
"vertex_count": 4,
"vertex_data": PackedByteArray(0, 0, 0, 0, 254, 255, 255, 191, 255, 255, 0, 0, 254, 255, 255, 191, 0, 0, 0, 0, 0, 0, 255, 191, 255, 255, 0, 0, 0, 0, 255, 191, 255, 255, 255, 127, 255, 255, 255, 127, 255, 255, 255, 127, 255, 255, 255, 127)
}]
blend_shape_mode = 0
shadow_mesh = SubResource("ArrayMesh_57aln")

[node name="package_box" type="RigidBody3D"]
mass = 3.0
can_sleep = false
continuous_cd = true
script = ExtResource("1_lly81")

[node name="Cube" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 0.759743, 0, 0, 0, 1, 0, 0, 0)
mesh = SubResource("ArrayMesh_70i2a")
skeleton = NodePath("")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.00195313, 0.000976563, 0.00100708)
shape = SubResource("BoxShape3D_kwxbf")

[node name="delivery_timer" type="Timer" parent="."]
autostart = true

[node name="timer" type="Label3D" parent="."]
transform = Transform3D(-4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 0.250444, 0, 0)
pixel_size = 0.0001
modulate = Color(0.298039, 0.184314, 0.0392157, 1)
text = "00:00"
font_size = 1867
outline_size = 0

[node name="package_type_glass" type="MeshInstance3D" parent="."]
transform = Transform3D(1.79217e-08, -0.205, -1.54771e-08, -1.79217e-08, 1.54771e-08, -0.205, 0.205, 1.79217e-08, -1.79217e-08, -0.251263, -0.0851691, -0.269272)
visible = false
mesh = SubResource("ArrayMesh_ycaqo")
skeleton = NodePath("")

[node name="package_type_eco" type="MeshInstance3D" parent="."]
transform = Transform3D(1.79217e-08, -0.205, -1.54771e-08, -1.79217e-08, 1.54771e-08, -0.205, 0.205, 1.79217e-08, -1.79217e-08, -0.251263, -0.0851691, -0.269272)
visible = false
mesh = SubResource("ArrayMesh_wlgpv")
skeleton = NodePath("")

[node name="package_type_water" type="MeshInstance3D" parent="."]
transform = Transform3D(1.79217e-08, -0.205, -1.54771e-08, -1.79217e-08, 1.54771e-08, -0.205, 0.205, 1.79217e-08, -1.79217e-08, -0.251263, -0.0851691, -0.269272)
visible = false
mesh = SubResource("ArrayMesh_xjoje")
skeleton = NodePath("")

[node name="Label3D" type="Label3D" parent="."]
transform = Transform3D(-4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, -0.252584, 0.147672, 0.357763)
pixel_size = 0.001
modulate = Color(0.188235, 0.109804, 0.0156863, 1)
outline_modulate = Color(0, 0, 0, 0)
text = "10kg"
font_size = 67
horizontal_alignment = 2

[connection signal="timeout" from="delivery_timer" to="." method="_on_delivery_timer_timeout"]
